# iceloadberg

./: LICENSE  README.md  pyproject.toml
src/iceloadberg/: cli.py  config.py
src/iceloadberg/adapters/sources/: postgres_jdbc.py
src/iceloadberg/adapters/states/: postgres.py
src/iceloadberg/adapters/targets/: iceberg.py
src/iceloadberg/core/: job.py  transform.py  windowing.py
src/iceloadberg/ports/: __init__.py  registry.py  source.py  state_store.py  target.py  window.py
tests/: mocks.py  test_job.py  test_registry.py  test_windowing.py
